switch to typescript, first cocktail class, created pump

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal/issues"
   },
-  "homepage": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal#readme"
+  "homepage": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal#readme",
+  "dependencies": {
+    "typescript": "^4.8.4"
+  }
 }
