--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal#readme",
   "dependencies": {
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
     "typescript": "^4.8.4"
   }
 }
