--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal#readme",
   "dependencies": {
+    "onoff": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
