--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,15 @@
     "display": "Node 14",
   
     "compilerOptions": {
-      "lib": ["es2020"],
-      "module": "commonjs",
+      "lib": ["es6"],
+      "module": "es6",
       "target": "es2020",
   
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
+      "allowSyntheticDefaultImports": true,
       "moduleResolution": "node",
 
       "outDir": "dist"
