--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "interdimensional-cocktail-portal",
   "version": "1.0.0",
   "description": "\"Rick and Morty Themed Interdimensional Cocktail Portal\" Cocktail Bot for Roboexotica 2022 - Raspberry Pi",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
