--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "\"Rick and Morty Themed Interdimensional Cocktail Portal\" Cocktail Bot for Roboexotica 2022 - Raspberry Pi",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts": "npx tsc -p tsconfig.json",
-    "start": "node ./dist/index.js"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "npm run build && electron ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "electron": "^21.3.0",
     "typescript": "^4.8.4"
   }
 }
