--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
   
     "compilerOptions": {
       "lib": ["ES2022"],
-      "module": "ES2022",
+      "module": "CommonJS",
       "target": "ES2022",
   
       "strict": true,
@@ -14,9 +14,12 @@
       "allowSyntheticDefaultImports": true,
       "moduleResolution": "node",
 
-      //"sourceMap": true
-
-      "outDir": "dist"
+      "sourceMap": true,
+      "outDir": "dist",
+      "baseUrl": ".",
+      "paths": {
+          "*": ["node_modules/*"]
+      }
     },
 
     "include": ["ts/*"],
