--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "electron": "^21.3.0",
-    "typescript": "^4.8.4"
+    "electron-rebuild": "^3.2.9"
   }
 }
