--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   },
   "homepage": "https://github.com/ChristianSchueler/interdimensional-cocktail-portal#readme",
   "dependencies": {
+    "dirty-json": "^0.9.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "openai": "^3.1.0",
     "onoff": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "electron": "^21.3.0",
-    "typescript": "^4.8.4",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
+    "typescript": "^4.8.4"
   }
 }
