--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,11 +9,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "noEmit": true,
+    "noEmit": false,
     "noUnusedLocals": false,        // for development so we can leave variables unused
     "noUnusedParameters": false,    // for development so we can leave variables unused
     "noImplicitReturns": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "dist"
   },
   "include": ["src"]
 }
