--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,9 @@
     "noUnusedParameters": false,    // for development so we can leave variables unused
     "noImplicitReturns": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    //"outFile": "dist/bundle.js"
+    // "noImplicitAny": true,
   },
   "include": ["src"]
 }
