--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,8 @@
   },
   "author": "Christian Schüler",
   "homepage": "",
-  "dependencies": {
-    
-  },
   "devDependencies": {
+    "gl-chromakey": "^1.0.0-beta.2",
     "gsap": "^3.11.3",
     "maptastic": "^3.0.0",
     "microbundle": "^0.15.1",
