--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,12 @@
   "name": "interdimensional-cocktail-portal-frontend",
   "version": "1.0.0",
   "description": "Interdimensional Cocktail Portal Frontend Code",
+  "source": "src/index.ts",
   "main": "dist/index.js",
   "type": "module",
-  "source": "src/index.ts",
   "scripts": {
-    "build": "microbundle",
-    "watch": "microbundle --watch"
+    "build": "microbundle -i src/index.ts -o dist/bundle.js --no-pkg-main -f modern",
+    "watch": "microbundle -i src/index.ts -o dist/bundle.js --no-pkg-main -f modern --watch"
   },
   "author": "Christian Schüler",
   "homepage": "",
