--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "karl-isis-the-25001",
   "version": "1.0.0",
-  "workspaces":[
-      "portal-windows-backend",
-      "dispenser_raspi",
-	  "portalgun-raspi-zero"
-  ],
   "description": "Karl-Iris the 25001 Cocktail Bot",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -15,14 +10,25 @@
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "node ./dist/index.js"
   },
+  "author": "",
+  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ChristianSchueler/karl-isis-the-25001.git"
   },
-  "author": "Christian Schüler",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/ChristianSchueler/karl-isis-the-25001/issues"
   },
-  "homepage": "https://github.com/ChristianSchueler/karl-isis-the-25001/#readme"
+  "homepage": "https://github.com/ChristianSchueler/karl-isis-the-25001/#readme",
+  "dependencies": {
+    "dirty-json": "^0.9.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "openai": "^3.1.0",
+    "onoff": "^6.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "typescript": "^4.9.4"
+  }
 }
