--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Karl-Iris the 25001 Cocktail Bot",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "setup": "npm i",
     "build": "tsc",
-    "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc -w",
     "start": "node ./dist/index.js"
   },
   "author": "",
