--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "karl-isis-the-25001",
   "version": "1.0.0",
-  "description": "Karl-Iris the 25001 Cocktail Bot",
+  "description": "Karl-Isis the 25001 Cocktail Mixing Bot",
   "main": "dist/index.js",
   "scripts": {
     "setup": "npm i",
@@ -11,7 +11,7 @@
     "watch": "tsc -w",
     "start": "node ./dist/index.js"
   },
-  "author": "",
+  "author": "Christian Schueler",
   "license": "ISC",
   "repository": {
     "type": "git",
