added organiyation to ENV

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,3 +1,4 @@
 # OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 # hint: use NPM dotenv module to import the keys inside this file
 OPENAI_API_KEY="INSERT KEY HERE"
+OPENAI_ORGANIZATION="org-INSERT HERE"
