--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   },
   "homepage": "https://github.com/ChristianSchueler/karl-isis-the-25001/#readme",
   "dependencies": {
-    "dirty-json": "^0.9.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "openai": "^4.0.0",
-    "onoff": "^6.0.3"
+    "dirty-json": "*",
+    "dotenv": "*",
+    "express": "*",
+    "openai": "*",
+    "onoff": "*",
+    "face-api.js": "*",
+    "canvas": "*",
+    "@tensorflow/tfjs-node": "*"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "typescript": "^4.9.4"
+    "@types/node": "*",
+    "typescript": "*"
   }
 }
