make CocktailRecipe a class as proper ingredients extend system string to use ingredients

--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
     "dotenv": "*",
     "express": "*",
     "openai": "*",
-    "onoff": "*",
-    "face-api.js": "*",
-    "canvas": "*",
-    "@tensorflow/tfjs-node": "*"
+    "onoff": "*"
   },
   "devDependencies": {
     "@types/node": "*",
