--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -2,3 +2,4 @@
 # hint: use NPM dotenv module to import the keys inside this file
 OPENAI_API_KEY="INSERT KEY HERE"
 OPENAI_ORGANIZATION="org-INSERT HERE"
+DEBUG="false"
