--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "startui": "electron ./dist/index.js",
+    "electron-rebuild": "electron-rebuild"
   },
   "author": "Christian Schueler",
   "license": "ISC",
@@ -30,6 +32,8 @@
   },
   "devDependencies": {
     "@types/node": "*",
-    "typescript": "*"
+    "typescript": "*",
+    "electron": "*",
+    "@electron/rebuild": "*"
   }
 }
