--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "karl-isis-the-25001",
   "version": "1.0.0",
   "description": "Karl-Isis the 25001 Cocktail Mixing Bot",
+  "workspaces":[
+      "ui"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "setup": "npm i",
