--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "workspaces": [
     "ui"
   ],
-  "main": "dist/index.js",
+  "main": "dist/ts/index.js",
   "scripts": {
     "setup": "npm i",
     "build": "tsc",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "start": "node ./dist/index.js",
-    "startui": "electron ./dist/index.js",
+    "start": "node ./dist/ts/index.js",
+    "startui": "electron ./dist/ts/index.js",
     "electron-rebuild": "electron-rebuild"
   },
   "author": "Christian Schueler",
