update env template to reflect config

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,5 +1,19 @@
-# OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 # hint: use NPM dotenv module to import the keys inside this file
+
+# OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 OPENAI_API_KEY="INSERT KEY HERE"
+
+# OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 OPENAI_ORGANIZATION="org-INSERT HERE"
+
 DEBUG="false"
+
+targetSquats = 2                # how many squats to perform
+gameWinTimeout_s = 10           # how long until the next game might start
+faceMinX = 100                  # only use faces in the center region
+faceMaxX = 540                  # only use faces in the center region
+gameStartTimeout_s = 3          # how long to see a face for starting a game
+topOffset_px = 20               #
+bottomOffset_px = 0             #
+gameLeftTimeout_s = 3           # cancel the game after 3 consecutive seconds without a face detected
+squatFactor = 1.2               #
