--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "workspaces": [
     "ui"
   ],
+  "type": "module",
   "main": "dist/ts/index.js",
   "scripts": {
     "setup": "npm i",
@@ -14,7 +15,6 @@
     "watch": "tsc -w",
     "start": "node ./dist/ts/index.js",
     "startui": "electron ./dist/ts/index.js",
-    "startsecure": "node ./dist/ts/index.js secure",
     "electron-rebuild": "electron-rebuild"
   },
   "author": "Christian Schueler",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@electron/rebuild": "*",
+    "@types/express": "^4.17.21",
     "@types/node": "*",
     "electron": "*",
     "typescript": "*"
