--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "display": "Node 14",  
     "compilerOptions": {
       "lib": ["ES2022", "DOM"],
-      "module": "CommonJS",
+      "module": "ES2022",
       "target": "ES2022",
   
       "strict": true,
