--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
   },
   "homepage": "https://github.com/ChristianSchueler/karl-isis-the-25001/#readme",
   "dependencies": {
-    "dirty-json": "*",
-    "dotenv": "*",
-    "express": "*",
-    "openai": "*",
+    "dirty-json": "^0.9.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^4.20.1",
     "socket.io": "^4.7.2",
     "onoff": "*"
   },
   "devDependencies": {
-    "@electron/rebuild": "*",
+    "@electron/rebuild": "^3.4.1",
     "@types/express": "^4.17.21",
-    "@types/node": "*",
-    "electron": "*",
-    "typescript": "*"
+    "@types/node": "^20.10.4",
+    "electron": "^28.0.0",
+    "typescript": "^5.3.3"
   }
 }
