--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "dirty-json": "^0.9.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^4.20.1",
-    "socket.io": "^4.7.2",
-    "onoff": "*"
+    "onoff": "*",
+    "openai": "^4.76.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.4.1",
