update copyright version 1.1, since we added gui

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "media-pipe-test",
-  "version": "1.0.0",
-  "description": "",
+  "name": "karl-isis-the-25001-ui",
+  "version": "1.1.0",
+  "description": "Karl-Isis the 25001 Cocktail Mixing Bot User Interface",
   "source": "src/index.ts",
   "main": "dist/bundle.js",
   "type": "module",
