open ai model in ENV

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,7 +1,17 @@
+# print a lot of stuff to the console and log files
+DEBUG="false"
+
 # OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 OPENAI_API_KEY="INSERT KEY HERE"
 
 # OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
 OPENAI_ORGANIZATION="org-INSERT HERE"
 
-DEBUG="false"
+# OpenAI used model for inference
+OPENAI_MODEL="gpt-3.5-turbo-1106"
+
+# start electron in fullscreeen AND kiosk mode
+FULLSCREEN="false"
+
+# hold long user has to hold the button to be registered
+BUTTON_MIN_HOLD_DURATION_MS=100
