added option to hide show dev tools now waiting at least 5 s for answer to be more fancy hiding mouse cursor

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -13,5 +13,8 @@ OPENAI_MODEL="gpt-3.5-turbo-1106"
 # start electron in fullscreeen AND kiosk mode
 FULLSCREEN="false"
 
+# show devtools in Electron
+DEVTOOLS="true"
+
 # hold long user has to hold the button to be registered
 BUTTON_MIN_HOLD_DURATION_MS=100
