--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -18,3 +18,6 @@ DEVTOOLS="true"
 
 # hold long user has to hold the button to be registered
 BUTTON_MIN_HOLD_DURATION_MS=100
+
+# how long should we wait after showing the recipe
+RECIPE_DISPLAY_DURATION_MS=20000
