AI System now configurable from .ENV

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -1,23 +1,33 @@
-# print a lot of stuff to the console and log files
-DEBUG="false"
-
-# OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
+# OpenAI GPT-3 API key goes here
 OPENAI_API_KEY="INSERT KEY HERE"
 
-# OpenAI GPT-3 API key goes here. Get it from here: https://beta.openai.com/account/api-keys
+# OpenAI GPT-3 API key goes here
 OPENAI_ORGANIZATION="org-INSERT HERE"
 
 # OpenAI used model for inference
+# e.g. gpt-3.5-turbo-1106, gpt-4o-mini, o1-mini, gpt-4o
+# default: gpt-3.5-turbo-1106
 OPENAI_MODEL="gpt-3.5-turbo-1106"
+
+# hold long user has to hold the button to be registered
+# default: 100
+BUTTON_MIN_HOLD_DURATION_MS=100
+
+# how long should we wait after showing the recipe
+# default: 20000
+RECIPE_DISPLAY_DURATION_MS=20000
+
+# which kind of requests are being used and which response format, e.g. JSON or comma separated lists
+# JsonResult, ListResult, PreventAlcoholicGpt, ChatGpt2024
+AI_SYSTEM="ChatGpt2024"
+
+##### debug and development options #####
+
+# print a lot of stuff to the console and log files
+DEBUG="false"
 
 # start electron in fullscreeen AND kiosk mode
 FULLSCREEN="false"
 
 # show devtools in Electron
-DEVTOOLS="true"
-
-# hold long user has to hold the button to be registered
-BUTTON_MIN_HOLD_DURATION_MS=100
-
-# how long should we wait after showing the recipe
-RECIPE_DISPLAY_DURATION_MS=20000
+DEVTOOLS="false"
