added OPENAI_MIN_QUERY_DURATION_MS option added zod package enhanced open ai interface to use structured output enhanced prompt to cycle through alcohol, yielding more diverse results new AI System option for structural output

--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -17,6 +17,10 @@ BUTTON_MIN_HOLD_DURATION_MS=100
 # default: 20000
 RECIPE_DISPLAY_DURATION_MS=20000
 
+# how long should we wait at least during querying OpenAI
+# default: 5000
+OPENAI_MIN_QUERY_DURATION_MS=5000
+
 # which kind of requests are being used and which response format, e.g. JSON or comma separated lists
 # JsonResult, ListResult, PreventAlcoholicGpt, ChatGpt2024
 AI_SYSTEM="ChatGpt2024"
