--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "dirty-json": "^0.9.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "onoff": "*",
     "openai": "^4.76.0",
     "socket.io": "^4.7.2",
-    "zod": "^3.24.1",
-    "onoff": "*"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.4.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "electron": "^28.0.0",
+    "electron": "^33.2.1",
     "typescript": "^5.3.3"
   }
 }
