--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch": "tsc -w",
     "start": "node ./dist/ts/index.js",
     "startui": "electron ./dist/ts/index.js",
+    "rebuild": "npm rebuild",
     "electron-rebuild": "electron-rebuild"
   },
   "author": "Christian Schueler",
@@ -40,7 +41,7 @@
     "@electron/rebuild": "^3.4.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "electron": "^33.2.1",
+    "electron": "^32.2.7",
     "typescript": "^5.3.3"
   }
 }
